--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,19 @@ h1 {
   color: blue;
   border: 4px solid black;
 }
+
+h3 {
+  color: red;
+}
+
+.surround {
+  border: 2px solid black;
+}
+
 img {
   float: left;
+}
+
+.curve {
+  font-style: italic;
 }
