--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 h1 {
   color: blue;
+  text-align: center;
   border: 4px solid black;
 }
 
@@ -16,5 +17,9 @@ img {
 }
 
 .curve {
+  font-style: italic;
+}
+
+.entice {
   font-style: italic;
 }
